--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Hello pavithra , Welcome to my website this is created for you</h4>
+      <h4>Hello, welcome this is kalyan </h4>
     </div>
   </body>
 </html>
