--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>hey gautham  </h4>
+      <h4> Hello, World! </h4>
     </div>
   </body>
 </html>
