--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4> Hi kalpana  </h4>
+      <h4> Hi kalpana , my session was completed , any questions? </h4>
     </div>
   </body>
 </html>
